--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -7,18 +7,12 @@
 </head>
 <body>
     <h3>Edit your Listing</h3>
-    <form >
+    <form method="POST" action="/listings/<%=listing._id%>?_method=PUT" >
         <input name="listings[title]" value="<%=listing.title%>" type="text">
         <br /><br />
-        <textarea 
-        name="listings[description]"
-        value="<%=listing.description%>">
-        </textarea>
+        <textarea name="listings[description]"><%=listing.description%></textarea>
         <br /><br />
-        <input 
-        name="listings[image]" 
-        value="<%=listing.image%>"
-        >
+        <input name="listings[image]" value="<%=listing.image%>" type="text">
         <br /><br />
         <input name="listings[price]" value="<%=listing.price%>" type="number">
         <br /><br />
