CRUD Operations Done

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BookMyStay</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="color-scheme" content="light">
+  <title>BookMyStay</title>
+
+  <style>
+    input,
+    textarea,
+    select,
+    button {
+      color: black;
+      background-color: white;
+    }
+  </style>
 </head>
+
 <body>
-    <h3>Edit your Listing</h3>
-    <form method="POST" action="/listings/<%=listing._id%>?_method=PUT" >
-        <input name="listings[title]" value="<%=listing.title%>" type="text">
-        <br /><br />
-        <textarea name="listings[description]"><%=listing.description%></textarea>
-        <br /><br />
-        <input name="listings[image]" value="<%=listing.image%>" type="text">
-        <br /><br />
-        <input name="listings[price]" value="<%=listing.price%>" type="number">
-        <br /><br />
-        <input name="listings[country]" value="<%=listing.country%>" type="text">
-        <br /><br />
-        <input name="listings[location]" value="<%=listing.location%>" type="text">
-        <br /><br />
-        <button>Edit</button>
-    </form>
+  <h3>Edit your Listing</h3>
+
+  <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
+    <input name="listings[title]" value="<%= listing.title %>" type="text"><br><br>
+
+    <textarea name="listings[description]"><%= listing.description %></textarea><br><br>
+
+    <input name="listings[image]" value="<%= listing.image %>" type="text"><br><br>
+
+    <input name="listings[price]" value="<%= listing.price %>" type="number"><br><br>
+
+    <input name="listings[country]" value="<%= listing.country %>" type="text"><br><br>
+
+    <input name="listings[location]" value="<%= listing.location %>" type="text"><br><br>
+
+    <button>Edit</button>
+  </form>
 </body>
 </html>
