--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="light">
+
     <title>BookMyStay</title>
 </head>
 <body>
@@ -17,5 +19,9 @@
     </ul>
     <br>
     <a href="/listings/<%= listing._id %>/edit">Edit this Listing</a>
+    <br><br>
+    <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
+        <button>Delete this listing</button>
+    </form>
 </body>
 </html>
