--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="color-scheme" content="light">
+<%layout("/layouts/boilerplate")%>
 
-    <title>BookMyStay</title>
-</head>
 <body>
     <h3>Listing Details :</h3>
     <ul>
@@ -24,4 +17,3 @@
         <button>Delete this listing</button>
     </form>
 </body>
-</html>
